--- a/OpenHashTab/OpenHashTab.vcxproj.filters
+++ b/OpenHashTab/OpenHashTab.vcxproj.filters
@@ -310,6 +310,12 @@
     <ClCompile Include="Hasher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HasherRegistry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -356,6 +362,9 @@
     </ClInclude>
     <ClInclude Include="crc32.h">
       <Filter>CRC32</Filter>
+    </ClInclude>
+    <ClInclude Include="SettingsDialog.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
