--- a/OpenHashTab/OpenHashTab.vcxproj.filters
+++ b/OpenHashTab/OpenHashTab.vcxproj.filters
@@ -29,6 +29,9 @@
     <Filter Include="CRC32">
       <UniqueIdentifier>{f023d767-ba4d-4281-9822-8aff43aeaf05}</UniqueIdentifier>
     </Filter>
+    <Filter Include="BLAKE3">
+      <UniqueIdentifier>{26c5a99a-5567-4892-9570-ea3267dd882d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -109,6 +112,24 @@
     <ClCompile Include="Standalone.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="blake3.c">
+      <Filter>BLAKE3</Filter>
+    </ClCompile>
+    <ClCompile Include="blake3_avx2.c">
+      <Filter>BLAKE3</Filter>
+    </ClCompile>
+    <ClCompile Include="blake3_avx512.c">
+      <Filter>BLAKE3</Filter>
+    </ClCompile>
+    <ClCompile Include="blake3_dispatch.c">
+      <Filter>BLAKE3</Filter>
+    </ClCompile>
+    <ClCompile Include="blake3_portable.c">
+      <Filter>BLAKE3</Filter>
+    </ClCompile>
+    <ClCompile Include="blake3_sse41.c">
+      <Filter>BLAKE3</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -165,6 +186,12 @@
     <ClInclude Include="Coordinator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="blake3_impl.h">
+      <Filter>BLAKE3</Filter>
+    </ClInclude>
+    <ClInclude Include="blake3.h">
+      <Filter>BLAKE3</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="OpenHashTab.rc">
@@ -183,6 +210,15 @@
     </None>
     <None Include="OpenHashTabShlExt.rgs">
       <Filter>Resource Files</Filter>
+    </None>
+    <None Include="blake3_avx2_x86-64_windows_msvc.asm">
+      <Filter>BLAKE3</Filter>
+    </None>
+    <None Include="blake3_avx512_x86-64_windows_msvc.asm">
+      <Filter>BLAKE3</Filter>
+    </None>
+    <None Include="blake3_sse41_x86-64_windows_msvc.asm">
+      <Filter>BLAKE3</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
