Revert "make patch be run id"
This reverts commit 0317b967cbf85d561a613b599d782bf7374a9e5b.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
             $Version = $Env:GITHUB_SHA;
             $VersionMinor = 0;
             $VersionMajor = 0;
-            $VersionPatch = $Env:GITHUB_RUN_ID;
+            $VersionPatch = 0;
         }
         Echo ("::set-output name=is_release::" + $IsRelease);
         Echo ("::set-output name=version::" + $Version);
