upload symbols for releases too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         draft: false
         prerelease: true
 
-    - name: Upload release asset
+    - name: Upload release binary
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
@@ -99,3 +99,22 @@ jobs:
         asset_path: .\OpenHashTab_setup.exe
         asset_name: OpenHashTab_setup.exe
         asset_content_type: application/octet-stream
+        
+    - name: Pack symbols
+      if: ${{ steps.checktag.outputs.is_release == 'yes' }}
+      run: |
+        cd ${{ github.workspace }}
+        7z a Symbols.7z .\bin\Release\*\OpenHashTab.pdb
+        
+    - name: Upload release symbols
+      if: ${{ steps.checktag.outputs.is_release == 'yes' }}
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: .\Symbols.7z
+        asset_name: Symbols.7z
+        asset_content_type: application/octet-stream
+
