--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
 
     - name: Upload release binary
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
-      id: upload-release-asset 
+      id: upload-release-binary
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -108,7 +108,7 @@ jobs:
         
     - name: Upload release symbols
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
-      id: upload-release-asset 
+      id: upload-release-symbol 
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
