--- a/OpenHashTab/OpenHashTab.vcxproj
+++ b/OpenHashTab/OpenHashTab.vcxproj
@@ -109,37 +109,37 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(SolutionDir)deps\msvc\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(SolutionDir)deps\msvc\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(SolutionDir)deps\msvc\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(SolutionDir)deps\msvc\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(SolutionDir)deps\msvc\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(SolutionDir)mbedtls_config;$(SolutionDir)concurrentqueue;$(SolutionDir)deps\msvc\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -173,6 +173,7 @@
       <ModuleDefinitionFile>.\OpenHashTab.def</ModuleDefinitionFile>
       <RegisterOutput>true</RegisterOutput>
       <AdditionalOptions>/PDBALTPATH:%_PDB%  /Brepro %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalDependencies>$(SolutionDir)deps\msvc\lib\$(Platform)\libgcrypt.lib;$(SolutionDir)deps\msvc\lib\$(Platform)\libgpg-error.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent />
     <Manifest>
@@ -215,6 +216,7 @@
       <ModuleDefinitionFile>.\OpenHashTab.def</ModuleDefinitionFile>
       <RegisterOutput>true</RegisterOutput>
       <AdditionalOptions>/PDBALTPATH:%_PDB%  /Brepro %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalDependencies>$(SolutionDir)deps\msvc\lib\$(Platform)\libgcrypt.lib;$(SolutionDir)deps\msvc\lib\$(Platform)\libgpg-error.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent />
     <Manifest>
@@ -258,6 +260,7 @@
       <ModuleDefinitionFile>.\OpenHashTab.def</ModuleDefinitionFile>
       <RegisterOutput>true</RegisterOutput>
       <AdditionalOptions>/PDBALTPATH:%_PDB%  /Brepro %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalDependencies>$(SolutionDir)deps\msvc\lib\$(Platform)\libgcrypt.lib;$(SolutionDir)deps\msvc\lib\$(Platform)\libgpg-error.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent />
     <Manifest>
@@ -303,6 +306,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <RegisterOutput>true</RegisterOutput>
       <AdditionalOptions>/PDBALTPATH:%_PDB%  /Brepro %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalDependencies>$(SolutionDir)deps\msvc\lib\$(Platform)\libgcrypt.lib;$(SolutionDir)deps\msvc\lib\$(Platform)\libgpg-error.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent />
     <Manifest>
@@ -347,6 +351,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <RegisterOutput>true</RegisterOutput>
       <AdditionalOptions>/PDBALTPATH:%_PDB%  /Brepro %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalDependencies>$(SolutionDir)deps\msvc\lib\$(Platform)\libgcrypt.lib;$(SolutionDir)deps\msvc\lib\$(Platform)\libgpg-error.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent />
     <Manifest>
@@ -392,6 +397,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <RegisterOutput>true</RegisterOutput>
       <AdditionalOptions>/PDBALTPATH:%_PDB%  /Brepro %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalDependencies>$(SolutionDir)deps\msvc\lib\$(Platform)\libgcrypt.lib;$(SolutionDir)deps\msvc\lib\$(Platform)\libgpg-error.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent />
     <Manifest>
